k3s/argocd/argocd-app/stateful/qbittorrent/raw-manifests/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
spec:
  ingressClassName: "traefik"
  rules:
  - host: qbittorrent.datrollout.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              name: web
